<resources>
    <string name="app_name">EntryPay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="activar_cuenta">ACTIVAR CUENTA</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="logo">Logo</string>
    <string name="bienvenido_a_entrypay">BIENVENIDO A ENTRYPAY</string>
    <string name="entry_button" />
    <string name="pay_button">menu_pay\n</string>
    <string name="intercom_button">menu_pay\n</string>
</resources>