<!-- Ruta: res/layout/content_main.xml -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_blue"
    android:contentDescription="@string/logo"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="32dp" />

    <!-- Entry Button -->

    <!-- Pay Button -->

    <ImageButton
        android:id="@+id/entryButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="304dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/entry_button"
        android:src="@drawable/menu_entry"
        app:layout_constraintBottom_toTopOf="@+id/footerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/payButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pay_button"
        android:src="@drawable/menu_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/entryButton" />

    <!-- Intercom Button -->
    <ImageButton
        android:id="@+id/intercomButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/menu_intercom"
    android:contentDescription="@string/intercom_button"
    app:layout_constraintTop_toBottomOf="@id/payButton"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <!-- Footer Text -->
    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Free your Pay, Free your Way"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/intercomButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
